--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,39 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
+ <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.ce.atomic.tests</groupId>
 	<artifactId>functional-test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<build>
+		<plugins>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.20</version>
+			    <configuration>
+			    	<skipTests>${skip.surefire.tests}</skipTests>
+			    	<parallel>all</parallel>
+			    	<useUnlimitedThreads>true</useUnlimitedThreads>
+			    </configuration>
+			</plugin>
+			
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-failsafe-plugin</artifactId>
+			    <version>2.20</version>
+			    <executions>
+			    	<execution>
+			    		<goals>
+			    			<goal>integration-test</goal>
+			    			<goal>verify</goal>
+			    		</goals>
+			    	</execution>
+			    </executions>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
